fix galleries about row flex wrapping

--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -24,7 +24,6 @@ $header-height= 50px
 // ABOUT
 
 #about-galleries
-  flex-wrap: nowrap
   h3
     font-size: $font-size-basic
 
